--- a/latex_document/main.tex
+++ b/latex_document/main.tex
@@ -35,4 +35,5 @@
 \input{MultiDimensional_Grids.tex}
 \input{Compute_architecture.tex}
 \input{Memory_architecture.tex}
+\input{Performance_considerations.tex}
 \end{document}
